--- a/src/main/resources/application-common.yml
+++ b/src/main/resources/application-common.yml
@@ -16,11 +16,28 @@ spring:
     uris: http://elasticsearch:9200
     username: elastic
     password: sSM*iZr*b0SOvxjC_QqP
+  rabbitmq:
+      host: rabbitmq
+      port: 5672
+      username: guest
+      password: guest
+      listener:
+        simple:
+          retry:
+            enabled: true
+            initial-interval: 3s
+            max-attempts: 5
+            max-interval: 5s
+            multiplier: 1
+          missing-queues-fatal: false
 redis:
   server:
     urls: redis://redis:6379
 client:
   product-service:
     url: http://ms.product:8080
+rabbitmq:
+  publisher-service:
+    queue: PRODUCT_UPDATE
 server:
   port: 8082
