--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,6 +84,6 @@ volumes:
     driver: local
   redis_data:
     driver: local
-  rabbitmq:
+  rabbitmq_data:
     driver: local
   elasticsearch_data:
