--- a/src/main/resources/liquibase/1.0/changeset-1.0.1.yml
+++ b/src/main/resources/liquibase/1.0/changeset-1.0.1.yml
@@ -1,10 +1,10 @@
 databaseChangeLog:
   - changeSet:
-      id: 1
+      id: 2
       author: kenan
       changes:
         - createTable:
-            tableName: stock
+            tableName: stock_log
             columns:
               - column:
                   name: id
@@ -13,22 +13,26 @@ databaseChangeLog:
                   constraints:
                     primaryKey: true
               - column:
-                  name: product_id
+                  name: stock_id
                   type: BIGINT
                   constraints:
                     nullable: false
-                    unique: true
               - column:
-                  name: quantity
+                  name: change_type
+                  type: VARCHAR(10)
+              - column:
+                  name: amount
                   type: INT
-                  defaultValueNumeric: 0
-                  constraints:
-                    nullable: false
               - column:
-                  name: created_at
-                  type: TIMESTAMP
-                  defaultValueComputed: CURRENT_TIMESTAMP
+                  name: description
+                  type: TEXT
               - column:
                   name: updated_at
                   type: TIMESTAMP
                   defaultValueComputed: CURRENT_TIMESTAMP
+              - addForeignKeyConstraint:
+                  baseTableName: stock_log
+                  baseColumnNames: stock_id
+                  referencedTableName: stock
+                  referencedColumnNames: id
+                  onDelete: CASCADE
